--- a/main.html
+++ b/main.html
@@ -21,15 +21,47 @@
           </div>
           <div class="media-icons">
             <!-- your code here -->
+				  <a href="#"><i class="fa fa-facebook"></i></a>
+			      <a href="#"><i class="fa fa-instagram"></i></a>
+			      <a href="#"><i class="fa fa-twitter"></i></a>
+			      <a href="#"><i class="fa fa-youtube"></i></a>
+			      <a href="#"><i class="fa fa-whatsapp"></i></a>
           </div>
         </div>
         <div class="link-boxes">
           <!-- your code here -->
+			<h3>Home</h3>
+			<ul>
+				<li><a href="#">Home</a></li>
+			</ul>
+			<h3>About</h3>
+			<ul>
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Our Team</a></li>
+			</ul>
+			<h3>Links</h3>
+			<ul>
+				<li><a href="#">About page</a></li>
+				<li><a href="#">Homepage</a></li>
+				<li><a href="#">Degitalpage</a></li>
+			</ul>
+			<h3>Services</h3>
+			<ul>
+				<li><a href="#">About page</a></li>
+				<li><a href="#">Homepage</a></li>
+				<li><a href="#">Degitalpage</a></li>
+			</ul>
+			<h3>Contact</h3>
+			<ul>
+				<li><a href="#">8879887262</li>
+			</ul>
         </div>
       </div>
       <div class="bottom-details">
         <!-- your code here -->
+		  <a href="#">privacy policy</a>	
+		  
       </div>
     </footer>
-  </body>
+  </body>
 </html>
